minor css change to stop buttons from moving off screen once health is updated

--- a/src/main/resources/CSS/HUD.css
+++ b/src/main/resources/CSS/HUD.css
@@ -2,6 +2,7 @@
     -fx-spacing: 5;
     -fx-padding: 10 10 10 10;
     -fx-min-width: 370;
+    -fx-max-width: 370;
 }
 .HUD{
     -fx-spacing: 10;
